# tomol

./: README.md  build_rvq_codebooks.py  evaluate_omol25.py  omol_sample_1m_to_csv.py  push_to_hf.py  push_tokenizer_to_hf.py  pyproject.toml  serialize_molecules.py  test_roundtrip.py
