[project]
name = "moltok"
version = "0.1.0"
description = "Tokenizer and evaluation utilities for molecular structures using RVQ codebooks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ase>=3.22.0",
    "datasets>=3.0.0",
    "fairchem-core>=1.3.0",
    "fairchem-data-omol>=0.1.1",
    "huggingface-hub>=0.25.0",
    "numpy>=2.0.0",
    "pandas>=2.0.0",
    "pyarrow>=15.0.0",
    "scikit-learn>=1.4.0",
    "tokenizers>=0.20.0",
    "torch>=2.0.0",
    "tqdm>=4.66.0",
    "transformers>=4.40.0",
]

[project.scripts]
moltok-eval = "evaluate_omol25:main"

[tool.uv]
# Force torch to come from PyPI (not custom index) for compatibility
# If you need CUDA, install torch separately first:
#   pip install torch --index-url https://download.pytorch.org/whl/cu121
